syntax = "proto2";

package stremio.core.runtime;

option java_package = "com.stremio.core.runtime.msg";

import "google/protobuf/empty.proto";

message ActionMetaDetails {
  oneof args {
    VideoState mark_as_watched = 1;
  }

  message VideoState {
    required string video_id = 1;
    required bool is_watched = 2;
  }
}